--- a/meibom.htm
+++ b/meibom.htm
@@ -23,7 +23,7 @@ My name is Kasper Meibom and
 		<br>
 I study multimediadesign at UCL.
 <br><br>
- - Welcome to my portfolio. 
+ - Welcome to my 
 				</h3>
 			</div>
 	</header>
